# fvWeb

./: .dockerignore  .gitignore  LICENSE.md  LICENSE.txt  README.md  TODOS.md  cleanup.sh  docker-compose.yml  docker-image.yml  nginx.conf  recompose.sh
app/: .env  Dockerfile  app.py  getDependencies.sh  main.py  requirements.txt
app/common/: configuration.py  database.py  ids.py  route_vars.py  wiki.py
app/models/: __init__.py  auth.py  forum.py  users.py  wiki.py
app/routes/: __init__.py  api.py  web.py
app/routes/api/: __init__.py  auth.py
app/routes/web/: __init__.py  index.py
app/static/css/: main.css  main.min.css  main.scss  main.scss.css  main.scss.css.map  readme.txt
app/static/img/: getIcons.ps1  getIcons.sh
app/static/js/: fvWikiEditor.js  readme.txt
app/static/sass/: getBootstrap.ps1  getBootstrap.sh  getDependencies.ps1  getDependencies.sh  main.scss
app/templates/: auth.html  base.html  home.html  index.html  web.html
app/templates/admin/: index.html
app/templates/components/: footer.html  navbar.html  sidebar.html
app/templates/forum/: index.html
backend/: .dockerignore  Dockerfile  example.env  pyproject.toml
backend/app/: __init__.py  __main__.py  config.py
backend/app/database/: __init__.py
backend/app/database/models/: __init__.py
backend/app/routers/: __init__.py
backend/app/routers/v1/: __init__.py
backend/app/schemas/: generic_schemas.py
backend/tests/: __init__.py
backend/tests/v1/: __init__.py  test_root.py
frontend/: Dockerfile  nginx.conf  pnpm-lock.yaml
redis/: README.md  redis.conf
(+20 files in other folders)
